--- a/views/form.erb
+++ b/views/form.erb
@@ -1,2 +1,10 @@
 <!-- Form -->
 
+<form action="form" method="post">
+
+  <input type="text" name="form" for="from" label="From" id="from">
+  <input type="text" name="form" for="to" label="To" id="to">
+  <input type="submit" value="Submit">
+  <input type="submit" value="Reset">
+
+</form>
