--- a/views/game.erb
+++ b/views/game.erb
@@ -16,6 +16,18 @@
         <div class="col-xs-6 col-xs-offset-3"></div>
       </div><!-- form -->
 
+      <% tower_number.times do %>
+
+        <%= erb :"shared/tower", locals: {tower_number: tower_number, tower: tower} %>
+
+      <% end %>
+
+
+
+
   </div>
+
+  <%= erb :"shared/form" %>
+  
 </div><!-- game -->
 
