--- a/views/layout.erb
+++ b/views/layout.erb
@@ -20,6 +20,8 @@
 
     <main class="container">
       
+      <h5><%= flash[:error] if flash[:error] %></h5>
+      
       <%= yield %>
       
     </main>
