--- a/views/shared/form.erb
+++ b/views/shared/form.erb
@@ -1,12 +1,14 @@
 <!-- Form -->
+<div>
 
-<form action="form" method="post">
+  <form class="form" action="form" method="post">
 
-  <label for="from">From</label>
-  <input type="text" name="from" id="from">
-  <label for="to">To</label>
-  <input type="text" name="to" id="to">
-  <input type="submit" value="Submit">
-  <input type="submit" value="Reset">
+    <label for="from">From</label>
+    <input type="text" name="from" id="from">
+    <label for="to">To</label>
+    <input type="text" name="to" id="to">
+    <button type="submit" value="Reset">Submit</button>
 
-</form>
+  </form>
+
+</div>
